Дополнительные кнопки
Куча кнопок упрощающих жизнь студенту
